# polybar-i3-windows

./: .gitignore  module.py  pyproject.toml
polybar_i3_windows/: __init__.py  icon_resolver.py
